--- a/app/src/main/res/layout/cell_calendar_events.xml
+++ b/app/src/main/res/layout/cell_calendar_events.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/cv_eventArea"
+    android:elevation="0dp"
+    app:cardCornerRadius="5dp"
     android:background="@android:color/transparent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
-        android:paddingStart="3dp"
-        android:paddingEnd="3dp">
+       android:padding="3dp">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/civ_colorTag"
@@ -29,7 +30,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:fontFamily="@font/popings_regular_400"
-            android:text="Type"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@+id/civ_colorTag"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,7 +40,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:fontFamily="@font/popings_medium_500"
-            android:text="Title child"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/civ_colorTag"
             app:layout_constraintTop_toBottomOf="@+id/tv_eventType" />
