--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="FAQs"
+            android:text="@string/faqs"
             android:textSize="25sp" />
 
         <com.google.android.material.card.MaterialCardView
