--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -23,8 +23,10 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cv_eventArea"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:padding="10dp"
+            app:layout_constraintVertical_bias="0"
+            app:layout_constraintBottom_toBottomOf="@+id/famb_addMenu"
             app:layout_constraintTop_toBottomOf="@+id/calendarView">
 
             <LinearLayout
@@ -106,15 +108,43 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_events"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:nestedScrollingEnabled="false"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="5dp"
+                app:layout_constraintVertical_bias="0"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/ll_selectedDate"
                 app:layout_constraintStart_toStartOf="@+id/cardview_events"
                 app:layout_constraintTop_toBottomOf="@+id/cardview_events"
                 tools:itemCount="3"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="8dp"
                 tools:listitem="@layout/cell_calendar_events" />
 
+            <LinearLayout
+                android:id="@+id/ll_noEvents"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="@+id/ll_selectedDate"
+                app:layout_constraintStart_toStartOf="@+id/cardview_events"
+                app:layout_constraintTop_toBottomOf="@+id/cardview_events">
+
+                <pl.droidsonroids.gif.GifImageView
+                    android:id="@+id/giv_noEvents"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    app:layout_constraintEnd_toEndOf="@+id/ll_selectedDate"
+                    app:layout_constraintStart_toStartOf="@+id/cardview_events"
+                    app:layout_constraintTop_toBottomOf="@+id/cardview_events" />
+
+                <TextView
+                    style="@style/secondary_titles"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nothing_planned_yet" />
+            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.github.clans.fab.FloatingActionMenu
