--- a/app/src/main/res/layout/fragment_bars_chart.xml
+++ b/app/src/main/res/layout/fragment_bars_chart.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
     android:background="@color/white"
-    tools:context=".expenses.BarsChartFragment">
+    tools:context=".views.expenses.fragments.BarsChartFragment">
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/bar_chart"
