--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".welcome.LogInFragment">
+    tools:context=".views.welcome.LogInFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
