--- a/app/src/main/res/layout/fragment_pie_chart.xml
+++ b/app/src/main/res/layout/fragment_pie_chart.xml
@@ -5,7 +5,7 @@
     android:layout_height="250dp"
     android:padding="10dp"
     android:background="@color/white"
-    tools:context=".expenses.PieChartFragment">
+    tools:context=".views.expenses.fragments.PieChartFragment">
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/pie_chart"
