--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".welcome.SignUpFragment">
+    tools:context=".views.welcome.SignUpFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
