tengo sueño, arreglado sign in, log in, ya funciona leer y guardar grupos de contraseñas encriptados. Arreglos pequeños realizados.
Falta crear una frase de seguridad para el usuario que sirva de contraseña de encriptacion.

--- a/app/src/main/res/layout/cell_form_account.xml
+++ b/app/src/main/res/layout/cell_form_account.xml
@@ -129,6 +129,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="90"
                 android:hint="@string/password_label"
+                app:errorIconDrawable="@null"
+                app:helperTextEnabled="true"
                 app:boxStrokeErrorColor="@color/red_error_500"
                 app:endIconMode="password_toggle">
 
